# agent

./: AGENTS.md  CONTEXT.md  README.md  USAGE.md  biome.json  tsconfig.json
.github/workflows/: issue-analysis.yml
components/: README.md
components/agent-framework/: README.md
components/dimos-mcp/: .gitignore  README.md  pyproject.toml
components/dimos-mcp/config/: go2.env.example
components/dimos-mcp/scripts/: run-go2-mcp.sh
components/dimos-mcp/src/dimos_dog_mcp/: agent_bridge.py  blueprint.py  config.py  go2_locomotion.py  go2_stop.py  gui.py  home.py  module.py  motion_runtime.py  navigation.py  server.py  stop.py  stop_actions.py  stroll.py  stroll_policy.py  tool_contract.py
components/dimos-mcp/tests/: test_agent_bridge.py  test_dimos_integration.py  test_go2_locomotion.py  test_home_navigation.py  test_stop_all.py  test_stroll_policy.py
dimos-mcp/: README.md
dimos-mcp/tests/: test_motion_runtime.py
docs/: Smart_Collar_Health_MCP_Spec_v0.1.md  agent-input-webhook-integration.md  health-mcp-consumer-integration.md  health-mcp-v0.2-cross-team-verification-checklist.md
integrations/dimos-dog-mcp/: README.md  pyproject.toml
integrations/dimos-dog-mcp/src/dimos_dog_mcp/: __init__.py  blueprint.py  config.py  module.py  motion_runtime.py
integrations/dimos-dog-mcp/tests/: test_dimos_integration.py  test_motion_runtime.py
integrations/dimos-mcp-wrapper/: README.md  pyproject.toml
integrations/dimos-mcp-wrapper/src/dimos_mcp_wrapper/: __init__.py  blueprint.py  upstream.py
integrations/dimos-mcp-wrapper/tests/: test_config.py  test_dimos_integration.py  test_dog_tools.py  test_forwarding.py  test_upstream.py
(+63 files in other folders)
