[build-system]
requires = ["setuptools==70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dimos-dog-mcp"
version = "0.1.0"
description = "Standalone DIMOS MCP server for user-directed quadruped motion"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dimos[web]==0.0.14b1",
    "langchain-core==1.5.0",
]

[project.optional-dependencies]
go2 = ["dimos[unitree]==0.0.14b1"]

[project.scripts]
dimos-dog-mcp = "dimos_dog_mcp.blueprint:main"
dimos-dog-gui = "dimos_dog_mcp.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
